# Aircrack-ng

./: LICENSE  README.md  airgui.py  airscript-beta-features.py  airscript-new-features-beta.py  airscript-ng.py  airscript-old-stable.py  airscript.py  airweb.py  config.cfg  mypy.ini  no-color-airscript-ng.py  pyproject.toml  setup.sh  tox.ini
airscript/legacy/: legacy-airscript-ng.py
airscript/legacy/attacks/: crack_handshake.py  use_aircrack.py
airscript/legacy/modules/: run_command.py
airscript/modules/: __init__.py  aircrack_module.py
airscript/modules/core/: __init__.py  constants.py  install_packages.py  shell_commands.py  term_colours.py  tk_elements.py  wireless_cards.py
airscript_ng/airscript/legacy/: legacy-airscript-ng.py
airscript_ng/airscript/legacy/modules/: __init__.py  gui_elements.py
airscript_ng/airscript/modules/: __init__.py  aircrack_module.py
airscript_ng/airscript/modules/core/: __init__.py  config.cfg  constants.py  install_packages.py  shell_commands.py  term_colours.py  tk_elements.py  wireless_cards.py
attacks/: __init__.py  create_fake_ap.py  manage_interfaces.py  manage_wordlists.py  use_aircrack.py  use_mdk.py  use_reaver.py
legacy/: airscript-ng.py
legacy/modules/: manage_deps.py  manage_inputs.py
legacy/scripts/ssid_lists/: custom_list.txt
modules/: __init__.py  manage_deps.py  run_command.py  term_colors.py  wirelesscard.py
scripts/: convert_logo.py  ifmon.sh
scripts/ssid_lists/: beacon_flood.txt  lan_list.txt
